fix z-index

--- a/src/styles/modules/filters.module.css
+++ b/src/styles/modules/filters.module.css
@@ -3,6 +3,7 @@
 	left:0;
 	bottom: 0;
 	margin: 3%;
+	z-index: 500;
 }
 
 .filter_panel {
